--- a/server/main/templates/dashboard.tmpl
+++ b/server/main/templates/dashboard.tmpl
@@ -61,7 +61,7 @@
                             <h4 class="card-title mb-0">Settings</h4>
                         </div>
                     </div>
-                    
+
                     <div class="content mt-3">
                         <div class="animated fadeIn">
                             <div class="row">
@@ -139,7 +139,7 @@
                 </div>
             </div>
         </div>
-        <!-- 
+        <!--
             <div class="col-lg-12">
                 <div class="card">
                     <div class="card-header">
@@ -359,7 +359,7 @@
                 </div>
             </div>
         </div>
-        
+
 
     </div>
     <!-- .content -->
@@ -379,6 +379,40 @@
 <script src="/static/js/lib/data-table/datatables-init.js"></script>
 <script src="/static/js/jquery.autocomplete.js"></script>
 <script type="text/javascript">
+
+var Api = function(family){
+    this.family = family;
+    this.debug = true;
+}
+
+Api.prototype.calibrate = function(callback) {
+    this.debug && console.log("api/v1/calibrate/" + this.family);
+    $.get("/api/v1/calibrate/" + this.family, function(data) {
+        callback(null, data)
+    }).fail(function(err) {
+        callback(err);
+    })
+}
+
+Api.prototype.settingsPassive = function(device, location, callback) {
+    var payload = JSON.stringify({
+        family: this.device,
+        device: device,
+        location: location
+    });
+    this.debug && console.log("/api/v1/settings/passive", payload);
+    $.post("/api/v1/settings/passive", payload)
+        .done(function(data) {
+            callback(null, data)
+        })
+        .fail(function(err){
+            return callback(err);
+        })
+}
+
+var api = new Api("{{.Family}}");
+var socket;
+
 (function($) {
 
     toastr.options = {
@@ -410,39 +444,38 @@
     });
     $("#recalibration").click(function() {
         $("#recalibrating").fadeIn("slow");
-        $.get("/api/v1/calibrate/{{.Family}}", function(data) {
-            console.log(data);
-            setTimeout(function() {
-                window.location.reload(1);
-            }, 10000);
+        api.calibrate(function(err,res){
+            if (err) throw new Error(err);
+            console.log(res);
+            $("#recalibrating").fadeOut("slow");
+            // window.location.reload(1);
         });
     });
     $(".stopScan").click(function(event) {
-        $.post("/api/v1/settings/passive", JSON.stringify({ family: "{{.Family}}", device: event.target.id }))
-            .done(function(data) {
-                $("#passiveBanner").fadeIn();
-                $("#passiveMessage").text("Stopped learning on " + event.target.id);
-                console.log(data);
-            });
+        api.settingsPassive(event.target.id, null, function(err, res){
+            if (err) throw new Error(err);
+            $("#passiveBanner").fadeIn();
+            $("#passiveMessage").text("Stopped learning on " + event.target.id);
+            console.log(data);
+        });
     });
     $("#startLearning2").click(function(e) {
         e.preventDefault();
-        console.log("pressed learning")
-        device = $("#deviceInput").val();
-        loc = $("#locationInput").val();
+        var device = $("#deviceInput").val();
+        var loc = $("#locationInput").val();
         if (loc == "" || device == "") {
             $("#passiveBannerBad").show();
             $("#passiveMessageBad").text("Must learn with location and device.");
         }
-        console.log(device);
-        $.post("/api/v1/settings/passive", JSON.stringify({ family: "{{.Family}}", device: device, location: loc }))
-            .done(function(data) {
-                $("#passiveBanner").fadeIn();
-                $("#passiveMessage").text("Learning on " + device);
-                console.log(data);
-            });
+        api.settingsPassive(device, loc, function(err, res){
+            if (err) throw new Error(err);
+            $("#passiveBanner").fadeIn();
+            $("#passiveMessage").text("Learning on " + device);
+            console.log(data);
+        });
     });
-    var socket;
+
+
 
     const socketMessageListener = (event) => {
         console.log(event);
@@ -485,6 +518,7 @@
     };
 
     socketCloseListener();
+
 
 })(jQuery);
 </script>
